Add multi-release JAR for iamge-service-ffm to allow preview features in java 21 but use the release versions in java 22